--- a/revenue.html
+++ b/revenue.html
@@ -26,7 +26,6 @@
 
     <div class="row light-row">
       <!-- row light-row -->
-
       <img src="images/revenue_chart01.png" class="img-fluid">
       <div class="col-sm-12 col-md-6">
         <h4 class="mt-3 mb-4 font-weight-bold dark-text">Breakdown Core Services</h4>
@@ -254,15 +253,15 @@
                 <td>Collect+<br />Total Revenue</td>
               </tr>
               <tr>
-                <td>85/60/100</td>
-                <td>&#163;850.00</td>
-                <td>&#163;110.00</td>
-                <td>&#163;110.00</td>
-                <td>50</td>
-                <td>&#163;1,0000.00</td>
-                <td>50</td>
-                <td>&#163;1,0000.00</td>
-                <td>&#163;20.00</td>
+                <td class="table-green-alt">85/60/100</td>
+                <td class="table-green-alt">&#163;850.00</td>
+                <td class="table-green-alt">&#163;110.00</td>
+                <td class="table-green-alt">&#163;110.00</td>
+                <td class="table-green-alt">50</td>
+                <td class="table-green-alt">&#163;1,0000.00</td>
+                <td class="table-green-alt">50</td>
+                <td class="table-green-alt">&#163;1,0000.00</td>
+                <td class="table-green-alt">&#163;20.00</td>
               </tr>
             </tbody>
           </table>
@@ -272,8 +271,8 @@
       </div><!-- <div class="col-6 col-md-7"> -->
 
       <div class="col-6 col-md-2 text-right">
-        <h1>&#163;75,012,45</h1>
-        <h2>+&#163;7,501.24 (10%)</h2>
+        <h2>&#163;75,012,45</h2>
+        <h3>+&#163;7,501.24 (10%)</h3>
       </div>
     </div> <!-- <div class="row"> -->
 
