--- a/network-efficiency-summary.html
+++ b/network-efficiency-summary.html
@@ -62,8 +62,8 @@
     </div>
 
     <div class="container-fluid px-4 pt-4">
-      <div class="row network-eff">
-        <div class="col-1-5">
+      <div class="row">
+        <div class="col-1-5 pr-2">
           <table>
             <thead>
               <tr>
@@ -72,19 +72,19 @@
             </thead>
             <tbody>
               <tr>
-                <td class="pr-3"><img src="images/avatar.png" class="img-fluid-ne pr-3 pl-3 pt-1" style="float:left">
-                  <h3>Joe Farrie</h3>
-                  <h4>North East / Tyneside 1</h4>
+                <td class="th-md"><img src="images/avatar.png" class="img-fluid-ne pl-3 pt-1 no-img" style="float:left">
+                  <h6 class="small">Joe Farrie</h6>
+                  <h6 class="small">North East / Tyneside 1</h6>
                 </td>
-                <td class="text-right">
-                  <h4>&#163;523.00</h4>
-                  <h4>Weekly Contribution</h4>
+                <td class="text-left pr-2">
+                  <h6 class="small">&#163;523.00</h6>
+                  <h6 class="small">Weekly Contribution</h6>
                 </td>
               </tr>
             </tbody>
           </table>
         </div>
-        <div class="col-1-5">
+        <div class="col-1-5 pr-2">
           <table>
             <thead>
               <tr>
@@ -93,19 +93,19 @@
             </thead>
             <tbody>
               <tr>
-                <td class="pr-3"><img src="images/avatar.png" class="img-fluid-ne pr-3 pl-3 pt-1" style="float:left">
-                  <h3>Joe Farrie</h3>
-                  <h4>North East / Tyneside 1</h4>
+                <td class="th-md"><img src="images/avatar.png" class="img-fluid-ne pl-3 pt-1 no-img " style="float:left">
+                  <h6 class="small">Joe Farrie</h6>
+                  <h6 class="small">North East / Tyneside 1</h6>
                 </td>
-                <td class="text-right">
-                  <h4>&#163;723.00</h4>
-                  <h4>Weekly Contribution</h4>
+                <td class="text-left pr-2">
+                  <h6 class="small">&#163;523.00</h6>
+                  <h6 class="small">Weekly Contribution</h6>
                 </td>
               </tr>
             </tbody>
           </table>
         </div>
-        <div class="col-1-5">
+        <div class="col-1-5 pr-2">
           <table>
             <thead>
               <tr>
@@ -114,19 +114,19 @@
             </thead>
             <tbody>
               <tr>
-                <td class="pr-3"><img src="images/avatar.png" class="img-fluid-ne pr-3 pl-3 pt-1" style="float:left">
-                  <h3>Joe Farrie</h3>
-                  <h4>North East / Tyneside 1</h4>
+                <td class="th-md"><img src="images/avatar.png" class="img-fluid-ne pl-3 pt-1 no-img" style="float:left">
+                  <h6 class="small">Joe Farrie</h6>
+                  <h6 class="small">North East / Tyneside 1</h6>
                 </td>
-                <td class="text-right">
-                  <h4>96%</h4>
-                  <h4>Weekly van fill</h4>
+                <td class="text-left pr-2">
+                  <h6 class="small">&#163;523.00</h6>
+                  <h6 class="small">Weekly Contribution</h6>
                 </td>
               </tr>
             </tbody>
           </table>
         </div>
-        <div class="col-1-5">
+        <div class="col-1-5 pr-2">
           <table>
             <thead>
               <tr>
@@ -135,19 +135,19 @@
             </thead>
             <tbody>
               <tr>
-                <td class="pr-3"><img src="images/avatar.png" class="img-fluid-ne pr-3 pl-3 pt-1" style="float:left">
-                  <h3>Joe Farrie</h3>
-                  <h4>North East / Tyneside 1</h4>
+                <td class="th-md"><img src="images/avatar.png" class="img-fluid-ne pl-3 pt-1 no-img" style="float:left">
+                  <h6 class="small">Joe Farrie</h6>
+                  <h6 class="small">North East / Tyneside 1</h6>
                 </td>
-                <td class="text-right">
-                  <h4>44%</h4>
-                  <h4>Weekly van fill</h4>
+                <td class="text-left pr-2">
+                  <h6 class="small">&#163;523.00</h6>
+                  <h6 class="small">Weekly Contribution</h6>
                 </td>
               </tr>
             </tbody>
           </table>
         </div>
-        <div class="col-1-5">
+        <div class="col-1-5 pr-2">
           <table>
             <thead>
               <tr>
@@ -156,13 +156,13 @@
             </thead>
             <tbody>
               <tr>
-                <td class="pr-3"><img src="images/avatar.png" class="img-fluid-ne pr-3 pl-3 pt-1" style="float:left">
-                  <h3>Joe Farrie</h3>
-                  <h4>North East / Tyneside 1</h4>
+                <td class="th-md"><img src="images/avatar.png" class="img-fluid-ne pl-3 pt-1 no-img" style="float:left">
+                  <h6 class="small">Joe Farrie</h6>
+                  <h6 class="small">North East / Tyneside 1</h6>
                 </td>
-                <td class="text-right">
-                  <h4>250</h4>
-                  <h4>Weekly collections</h4>
+                <td class="text-left pr-2">
+                  <h6 class="small">&#163;523.00</h6>
+                  <h6 class="small">Weekly Contribution</h6>
                 </td>
               </tr>
             </tbody>
@@ -170,7 +170,6 @@
         </div>
       </div>
     </div>
-
 
   </div>
   </div><!-- <div class="modal-body"> -->
