--- a/regional-contribution-this-week.html
+++ b/regional-contribution-this-week.html
@@ -34,21 +34,21 @@
       <div class="col-sm-8">
         <div class="table-orange">
           <!-- TABLE START -->
-          <table class="table table-orange table-bordered table-hover table-responsive-md">
+          <table class="table table-orange table-bordered table-hover table-responsive">
             <thead>
               <tr>
-                <td class="th-sm table-white">&nbsp;</td>
-                <td class="th-sm">Shipments</td>
-                <td class="th-sm">Parcels (24/48 hr)</td>
-                <td class="th-sm">Packets</td>
-                <td class="th-sm">Other</td>
-                <td class="th-sm">Total Revenue</td>
-                <td class="th-sm">Local G.P.</td>
-                <td class="th-sm">% G.P.</td>
-                <td class="th-sm">Average Profit per shipment</td>
-                <td class="th-sm">Average Volume per client</td>
-                <td class="th-sm">% Contribution to LCP</td>
-                <td class="th-sm">HQ G.P</td>
+                <td class="th-md table-white">&nbsp;</td>
+                <td class="th-md">Shipments</td>
+                <td class="th-md">Parcels (24/48 hr)</td>
+                <td class="th-md">Packets</td>
+                <td class="th-md">Other</td>
+                <td class="th-md">Total Revenue</td>
+                <td class="th-md">Local G.P.</td>
+                <td class="th-md">% G.P.</td>
+                <td class="th-md">Average Profit per shipment</td>
+                <td class="th-md">Average Volume per client</td>
+                <td class="th-md">% Contribution to LCP</td>
+                <td class="th-md">HQ G.P</td>
               </tr>
             </thead>
 
@@ -479,38 +479,38 @@
 
       <div class="col-sm-4">
 
-        <table class="rp-average table-responsive-md network-eff">
+        <table class="rp-average table-responsive-md">
           <tbody>
             <tr>
               <td>
-                <h3>Total HQ Contribution</h3>
+                <h6>Total HQ Contribution</h6>
               </td>
               <td class="text-right">
-                <h3>&#163;75,012.44</h3>
+                <h6>&#163;75,012.44</h6>
               </td>
             </tr>
             <tr>
               <td>
-                <h3>HQ Contribution / parcel</h3>
+                <h6>HQ Contribution / parcel</h6>
               </td>
               <td class="text-right">
-                <h3>&#163;0.46</h3>
+                <h6>&#163;0.46</h6>
               </td>
             </tr>
             <tr>
               <td>
-                <h3>Average shipments / client</h3>
+                <h6>Average shipments / client</h6>
               </td>
               <td class="text-right">
-                <h3>&#163;38.6</h3>
+                <h6>&#163;38.6</h6>
               </td>
             </tr>
             <tr>
               <td>
-                <h3>Average regional GP</h3>
+                <h6>Average regional GP</h6>
               </td>
               <td class="text-right">
-                <h3>&#163;1.38</h3>
+                <h6>&#163;1.38</h6>
               </td>
             </tr>
           </tbody>
