--- a/regional-progression-ten-week.html
+++ b/regional-progression-ten-week.html
@@ -37,7 +37,7 @@
             <td class="th-sm">Registered Accounts</td>
             <td class="th-sm">Traded this week</td>
             <td class="th-sm">Highest ever traders</td>
-            <td class="th-sm">New Accounts this week</td>
+            <td class="th-md">New Accounts this week</td>
             <td class="th-sm">WK 1 (Vol / Clients)</td>
             <td class="th-sm">WK 2 (Vol / Clients)</td>
             <td class="th-sm">WK 3 (Vol / Clients)</td>
