--- a/highest-use-of-ticket.html
+++ b/highest-use-of-ticket.html
@@ -20,7 +20,7 @@
     <!-- HEADER -->
     <div class="row py-2-ov table-dark margin-bt">
       <div class="col-sm-6">
-        <h4 class="light-text">CLIENT REVIEWS</h4>
+        <h4 class="light-text">HIGHEST USE OF TICKET SYSTE (PER CLIENT)</h4>
       </div>
       <div class="col-sm-6">
         <h4 class="light-text right-align">WC 01.01.2019 / PERIOD 1</h4>
@@ -28,18 +28,24 @@
     </div>
     <!-- END HEADER -->
 
-    <div class="row px-5">
+    <div class="row px-0">
+      <div class="col-xl-12">
+          <h4>Top 30 Clients</h4>
+      </div>
+    </div>
+
+    <div class="row">
       <div class="col-xl-12">
         <table class="table-white table-responsive-md">
 
           <thead>
             <tr>
-              <td>&nbsp;</td>
+              <td class="th-sm">&nbsp;</td>
               <td class="text-center-bold th-md">
-                <h6>Date</h6>
+                <h6>Client name</h6>
               </td>
               <td class="text-center-bold th-md">
-                <h6>Client Name (average)</h6>
+                <h6>Region</h6>
               </td>
               <td class="text-center-bold th-md">
                 <h6>Region</h6>
@@ -48,16 +54,19 @@
                 <h6>Trading with LCP</h6>
               </td>
               <td class="text-center-bold th-md">
-                <h6>Ticket reference</h6>
+                <h6>Number of Shipments</h6>
               </td>
               <td class="text-center-bold th-md">
-                <h6>Type of ticket</h6>
+                <h6>No. Tickets</h6>
               </td>
               <td class="text-center-bold th-md">
-                <h6>LCP CS</h6>
+                <h6>% Ratio</h6>
               </td>
               <td class="text-center-bold th-md">
-                <h6>Star rating</h6>
+                <h6>Average Messages per ticket</h6>
+              </td>
+              <td class="text-center-bold th-md">
+                <h6>Most frequent subject</h6>
               </td>
             </tr>
           </thead>
