--- a/highest-use-of-ticket.html
+++ b/highest-use-of-ticket.html
@@ -20,7 +20,7 @@
     <!-- HEADER -->
     <div class="row py-2-ov table-dark margin-bt">
       <div class="col-sm-6">
-        <h4 class="light-text">HIGHEST USE OF TICKET SYSTE (PER CLIENT)</h4>
+        <h4 class="light-text">HIGHEST USE OF TICKET SYSTEM (PER CLIENT)</h4>
       </div>
       <div class="col-sm-6">
         <h4 class="light-text right-align">WC 01.01.2019 / PERIOD 1</h4>
@@ -30,222 +30,55 @@
 
     <div class="row px-0">
       <div class="col-xl-12">
-          <h4>Top 30 Clients</h4>
+        <h4>Top 30 Clients</h4>
       </div>
     </div>
 
     <div class="row">
-      <div class="col-xl-12">
-        <table class="table-white table-responsive-md">
+      <div class="table-white table-responsive-sm">
+        <table class="table table-bordered">
 
           <thead>
             <tr>
-              <td class="th-sm">&nbsp;</td>
-              <td class="text-center-bold th-md">
-                <h6>Client name</h6>
-              </td>
-              <td class="text-center-bold th-md">
-                <h6>Region</h6>
-              </td>
-              <td class="text-center-bold th-md">
-                <h6>Region</h6>
-              </td>
-              <td class="text-center-bold th-md">
-                <h6>Trading with LCP</h6>
-              </td>
-              <td class="text-center-bold th-md">
-                <h6>Number of Shipments</h6>
-              </td>
-              <td class="text-center-bold th-md">
-                <h6>No. Tickets</h6>
-              </td>
-              <td class="text-center-bold th-md">
-                <h6>% Ratio</h6>
-              </td>
-              <td class="text-center-bold th-md">
-                <h6>Average Messages per ticket</h6>
-              </td>
-              <td class="text-center-bold th-md">
-                <h6>Most frequent subject</h6>
-              </td>
+              <th class="pr-5">&nbsp;</th>
+              <th scope="col" class="th-md">
+                Client name
+              </th>
+              <th class="th-sm" scope="col">
+                Region
+              </th>
+              <th scope="col" class="th-md">
+                Trading with LCP
+              </th>
+              <th scope="col" class="th-md">
+            Number of Shipments
+              </th>
+              <th class="th-sm" scope="col">
+              No. Tickets
+              </th>
+              <th class="th-sm">
+                % Ratio
+              </th>
+              <th scope="col" class="th-lg">
+                Average Messages per ticket
+              </th>
+              <th scope="col" class="th-md">
+                Most frequent subject
+              </th>
+
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;">&#9734;</span></td>
-              <td class="text-center px-2">01.01.2019</td>
-              <td class="text-center px-2">FE Maughans (4.3)</td>
-              <td class="text-center px-2">North East</td>
-              <td class="text-center px-2">1053 days</td>
-              <td class="text-center px-2">LCP 34567</td>
-              <td class="text-center px-2">Where is my parcel</td>
-              <td class="text-center px-2">Rachel Heads</td>
-              <td class="text-center px-2">2.0</td>
-            </tr>
-            <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;">&#9734;</span></td>
-              <td class="text-center px-2">01.01.2019</td>
-              <td class="text-center px-2">FE Maughans (4.3)</td>
-              <td class="text-center px-2">North East</td>
-              <td class="text-center px-2">1053 days</td>
-              <td class="text-center px-2">LCP 34567</td>
-              <td class="text-center px-2">Where is my parcel</td>
-              <td class="text-center px-2">Rachel Heads</td>
-              <td class="text-center px-2">2.0</td>
-            </tr>
-            <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;">&#9734;</span></td>
-              <td class="text-center px-2">01.01.2019</td>
-              <td class="text-center px-2">FE Maughans (4.3)</td>
-              <td class="text-center px-2">North East</td>
-              <td class="text-center px-2">1053 days</td>
-              <td class="text-center px-2">LCP 34567</td>
-              <td class="text-center px-2">Where is my parcel</td>
-              <td class="text-center px-2">Rachel Heads</td>
-              <td class="text-center px-2">2.0</td>
-            </tr>
-            <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;">&#9734;</span></td>
-              <td class="text-center px-2">01.01.2019</td>
-              <td class="text-center px-2">FE Maughans (4.3)</td>
-              <td class="text-center px-2">North East</td>
-              <td class="text-center px-2">1053 days</td>
-              <td class="text-center px-2">LCP 34567</td>
-              <td class="text-center px-2">Where is my parcel</td>
-              <td class="text-center px-2">Rachel Heads</td>
-              <td class="text-center px-2">2.0</td>
-            </tr>
-            <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;">&#9734;</span></td>
-              <td class="text-center px-2">01.01.2019</td>
-              <td class="text-center px-2">FE Maughans (4.3)</td>
-              <td class="text-center px-2">North East</td>
-              <td class="text-center px-2">1053 days</td>
-              <td class="text-center px-2">LCP 34567</td>
-              <td class="text-center px-2">Where is my parcel</td>
-              <td class="text-center px-2">Rachel Heads</td>
-              <td class="text-center px-2">2.0</td>
-            </tr>
-            <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;">&#9734;</span></td>
-              <td class="text-center px-2">01.01.2019</td>
-              <td class="text-center px-2">FE Maughans (4.3)</td>
-              <td class="text-center px-2">North East</td>
-              <td class="text-center px-2">1053 days</td>
-              <td class="text-center px-2">LCP 34567</td>
-              <td class="text-center px-2">Where is my parcel</td>
-              <td class="text-center px-2">Rachel Heads</td>
-              <td class="text-center px-2">2.0</td>
-            </tr>
-            <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;">&#9734;</span></td>
-              <td class="text-center px-2">01.01.2019</td>
-              <td class="text-center px-2">FE Maughans (4.3)</td>
-              <td class="text-center px-2">North East</td>
-              <td class="text-center px-2">1053 days</td>
-              <td class="text-center px-2">LCP 34567</td>
-              <td class="text-center px-2">Where is my parcel</td>
-              <td class="text-center px-2">Rachel Heads</td>
-              <td class="text-center px-2">2.0</td>
-            </tr>
-            <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;">&#9734;</span></td>
-              <td class="text-center px-2">01.01.2019</td>
-              <td class="text-center px-2">FE Maughans (4.3)</td>
-              <td class="text-center px-2">North East</td>
-              <td class="text-center px-2">1053 days</td>
-              <td class="text-center px-2">LCP 34567</td>
-              <td class="text-center px-2">Where is my parcel</td>
-              <td class="text-center px-2">Rachel Heads</td>
-              <td class="text-center px-2">2.0</td>
-            </tr>
-            <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;">&#9734;</span></td>
-              <td class="text-center px-2">01.01.2019</td>
-              <td class="text-center px-2">FE Maughans (4.3)</td>
-              <td class="text-center px-2">North East</td>
-              <td class="text-center px-2">1053 days</td>
-              <td class="text-center px-2">LCP 34567</td>
-              <td class="text-center px-2">Where is my parcel</td>
-              <td class="text-center px-2">Rachel Heads</td>
-              <td class="text-center px-2">2.0</td>
-            </tr>
-            <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;">&#9734;</span></td>
-              <td class="text-center px-2">01.01.2019</td>
-              <td class="text-center px-2">FE Maughans (4.3)</td>
-              <td class="text-center px-2">North East</td>
-              <td class="text-center px-2">1053 days</td>
-              <td class="text-center px-2">LCP 34567</td>
-              <td class="text-center px-2">Where is my parcel</td>
-              <td class="text-center px-2">Rachel Heads</td>
-              <td class="text-center px-2">2.0</td>
-            </tr>
-            <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;">&#9734;</span></td>
-              <td class="text-center px-2">01.01.2019</td>
-              <td class="text-center px-2">FE Maughans (4.3)</td>
-              <td class="text-center px-2">North East</td>
-              <td class="text-center px-2">1053 days</td>
-              <td class="text-center px-2">LCP 34567</td>
-              <td class="text-center px-2">Where is my parcel</td>
-              <td class="text-center px-2">Rachel Heads</td>
-              <td class="text-center px-2">2.0</td>
-            </tr>
-            <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;">&#9734;</span></td>
-              <td class="text-center px-2">01.01.2019</td>
-              <td class="text-center px-2">FE Maughans (4.3)</td>
-              <td class="text-center px-2">North East</td>
-              <td class="text-center px-2">1053 days</td>
-              <td class="text-center px-2">LCP 34567</td>
-              <td class="text-center px-2">Where is my parcel</td>
-              <td class="text-center px-2">Rachel Heads</td>
-              <td class="text-center px-2">2.0</td>
-            </tr>
-            <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;">&#9734;</span></td>
-              <td class="text-center px-2">01.01.2019</td>
-              <td class="text-center px-2">FE Maughans (4.3)</td>
-              <td class="text-center px-2">North East</td>
-              <td class="text-center px-2">1053 days</td>
-              <td class="text-center px-2">LCP 34567</td>
-              <td class="text-center px-2">Where is my parcel</td>
-              <td class="text-center px-2">Rachel Heads</td>
-              <td class="text-center px-2">2.0</td>
-            </tr>
-            <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;">&#9734;</span></td>
-              <td class="text-center px-2">01.01.2019</td>
-              <td class="text-center px-2">FE Maughans (4.3)</td>
-              <td class="text-center px-2">North East</td>
-              <td class="text-center px-2">1053 days</td>
-              <td class="text-center px-2">LCP 34567</td>
-              <td class="text-center px-2">Where is my parcel</td>
-              <td class="text-center px-2">Rachel Heads</td>
-              <td class="text-center px-2">2.0</td>
-            </tr>
-            <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;">&#9734;</span></td>
-              <td class="text-center px-2">01.01.2019</td>
-              <td class="text-center px-2">FE Maughans (4.3)</td>
-              <td class="text-center px-2">North East</td>
-              <td class="text-center px-2">1053 days</td>
-              <td class="text-center px-2">LCP 34567</td>
-              <td class="text-center px-2">Where is my parcel</td>
-              <td class="text-center px-2">Rachel Heads</td>
-              <td class="text-center px-2">2.0</td>
-            </tr>
-            <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;">&#9734;</span></td>
-              <td class="text-center px-2">01.01.2019</td>
-              <td class="text-center px-2">FE Maughans (4.3)</td>
-              <td class="text-center px-2">North East</td>
-              <td class="text-center px-2">1053 days</td>
-              <td class="text-center px-2">LCP 34567</td>
-              <td class="text-center px-2">Where is my parcel</td>
-              <td class="text-center px-2">Rachel Heads</td>
-              <td class="text-center px-2">2.0</td>
+              <td class=" tick-sad"></td>
+              <td>FE Maughans (4.3)</td>
+              <td>North East</td>
+              <td>1053 days</td>
+              <td>200</td>
+              <td>5</td>
+              <td>2.5</td>
+              <td>4.3</td>
+              <td>Where is my parcel (4-80%)</td>
             </tr>
           </tbody>
         </table>
